Frontpage picture changed. Bibbase.bib included

--- a/frontpage.tex
+++ b/frontpage.tex
@@ -5,7 +5,7 @@
 Hyttebums 2012 ansøgning\\[0.7cm]
 \LARGE Holy \& Moly - videnskabelig undersøgelse af hyttebumskandidater\\[1cm]
 \HRule\\[2cm]  
-\includegraphics[width=8cm]{HolyMolyKB}\\ %Use this if you want a picture on the frontpage
+\includegraphics[width=8cm]{HolyMolyBowling}\\ %Use this if you want a picture on the frontpage
 
 \Large Simon Dam Grønnegaard aka Holy\\ 
 Morten Halvorsen aka Moly
