--- a/Ansøgning.tex
+++ b/Ansøgning.tex
@@ -37,7 +37,7 @@
 \fancyhfoffset{20pt}
 \fancyhead[OL]{Hyttebums 2012 ansøgning \\ Simon Dam Grønnegaard \& Morten Halvorsen}
 %\fancyhead[OC]{Date \\ insert date}
-\fancyhead[OR]{Danmarks Tekniske Universitet\\ DTU Elektro}
+\fancyhead[OR]{Danmarks Tekniske Universitet\\ DTU Hyttebums}
 \fancyfoot[FL]{}
 \fancyfoot[FC]{\thepage}
 \fancyfoot[FR]{}
