--- a/bibbase.bib
+++ b/bibbase.bib
@@ -7,3 +7,23 @@
 %    year = {----},
 %    note = {\url{http://www.flux.dk/industrial/standard_design/dok/1000\%20current\%20transformer.pdf}}
 %}
+
+
+@misc{bib:url:WikiBaconBooks,
+    author = {Wikipedia},
+    title = {Book About Bacon},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/List_of_books_about_bacon}}
+}
+
+http://en.wikipedia.org/wiki/List_of_books_about_bacon
+@book{lauer2009bacon,
+  title={Bacon: A Love Story: A Salty Survey of Everybody's Favorite Meat},
+  author={Lauer, H.},
+  isbn={9780061704284},
+  lccn={2009009691},
+  url={http://books.google.dk/books?id=UztZxSRJlV4C},
+  year={2009},
+  publisher={HarperCollins}
+}
