--- a/frontpage.tex
+++ b/frontpage.tex
@@ -18,6 +18,6 @@ Department of housebums\\
 \today \end{flushleft}
 \vspace*{\stretch{2}} \normalsize
 \begin{flushright}
-\includegraphics[width=2cm]{./pf}\\
+\includegraphics[width=2cm]{./PF}\\
 \end{flushright}
 \end{titlepage}
