--- a/tex/data.tex
+++ b/tex/data.tex
@@ -1,3 +1,59 @@
-
-
 \section{Erfaring}
+En samlet liste af erfaringen de to kandidater har indenfor feltet hyttebombing indenfor Polyteknisk Forening:
+
+\subsection{Studiestarten}
+\begin{enumerate}
+\item Vektor 2006
+\item CSK 2007
+\item CSK 2008
+\item Vektor 2008
+\item CSK 2009
+\item Vektor 2009
+\end{enumerate}
+
+\subsection{Madhold}
+\begin{enumerate}
+\item vOPtur 2008
+\item Rustur 2009
+\item hyttetur ELKO nystartende 2010
+\item S-husets hyttetur 2011
+\item OPtur 2011
+\item Rustur 2011
+\item hyttetur ELKO nystartende 2011
+\item S-husets hyttetur 2012
+\end{enumerate}
+
+
+\subsection{Arrangør af ture}
+
+\begin{enumerate}
+\item Rustur 2006
+\item HerreHyggeHyttetur ELKO 2007 
+\item OPtur 2007
+\item Rustur 2007
+\item HerreHyggeHyttetur ELKO 2008
+\item OPtur 2008
+\item Rustur 2008
+\item hyttetur ELKO nystartende 2008
+\item HerreHyggeHyttetur ELKO 2009
+\item OPtur 2009
+\item Rustur 2009
+\item hyttetur ELKO nystartende 2009
+\item HerreHyggeHyttetur ELKO 2011
+\item HerreHyggeHyttetur ELKO 2012
+\end{enumerate}
+
+\subsection{PF kompetancer}
+\begin{enumerate}
+\item Formand for ELKO rådet 2007-2009
+\item UddanelsesPolitisk Råd 2007-2012
+\item ISN Fotonik 2007-2012
+\item Hegnet 2007->
+\item Hegnet Formand 2007-2008
+\item Fællesrådet 2009+2011-2012
+\item Fællesrådets ForretningsUdvalg 2009-2012
+\item PF's Bestyrelse 2010
+\item Formand for ELKO rådet 2011-2012
+\item Akademisk Råd (DTU) 2011-2012
+\end{enumerate}
+
