Tilføjet mere data - grafer i latex ;)

--- a/Ansøgning.tex
+++ b/Ansøgning.tex
@@ -31,6 +31,12 @@
   pdfsubject={Insert subject of assignment}}
 \usepackage{memhfixc}% rettelser til hyperref
 
+%%%%grafer
+\usepackage{tikz}
+\usepackage{pgfplots}
+%\pgfplotsset{compat=1.4}
+
+
 
 \fancyhf{} % tom header/footer
 \fancyhfoffset{20pt}
