--- a/bibbase.bib
+++ b/bibbase.bib
@@ -9,15 +9,114 @@
 %}
 
 
-@misc{bib:url:WikiBaconBooks,
-    author = {Wikipedia},
-    title = {Book About Bacon},
+
+
+%
+% Casper og mandrilaftalen
+%
+
+@misc{bib:url:Finn:Pedo,
+    author = {Casper \& Mandrilaftalen},
+    title = {Gentleman Finn som pædofil},
     howpublished = {Website},
     year = {2012},
-    note = {\url{http://en.wikipedia.org/wiki/List_of_books_about_bacon}}
-}
+    note = {\url{http://www.youtube.com/watch?v=U0wjq_bdz5A}}
+    }
 
-http://en.wikipedia.org/wiki/List_of_books_about_bacon
+@misc{bib:url:Finn:Satan, 
+    author = {Casper \& Mandrilaftalen},
+    title = {Gentleman Finn som satan tilbeder},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.youtube.com/watch?v=4He4X44J2i8}}
+    }
+    
+    @misc{bib:url:Finn:SovendeKvinder, 
+    author = {Casper \& Mandrilaftalen},
+    title = {Gentleman Finn Dyrker Sex med sovende kvinder},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.youtube.com/watch?v=fmaZS0AvKak}}
+    }
+
+@misc{bib:url:Finn:TV2, 
+    author = {Casper \& Mandrilaftalen},
+    title = {Gentleman Finn som TV2 ansat},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.youtube.com/watch?v=oU4vRcXYf8I}}
+    }
+    
+    
+@misc{bib:url:Finn:Nazist, 
+    author = {Casper \& Mandrilaftalen},
+    title = {Gentleman Finn som Nazist},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.youtube.com/watch?v=GysK_fY4SZc}}
+    }
+    
+    
+@misc{bib:url:SalsaMusli, 
+    author = {Casper \& Mandrilaftalen},
+    title = {Broder Salsa sortere musli},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.youtube.com/watch?v=0JnBYU3pcuI}}
+    }   
+    
+    
+@misc{bib:url:SalsaTaeppe, 
+    author = {Casper \& Mandrilaftalen},
+    title = {Broder Salsa folder tæpper},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.youtube.com/watch?v=-E-My1w7Ofg}}
+    }
+
+%
+% Reklamer
+%
+
+@misc{bib:url:Reklame:Dild, 
+    author = {Casper \& Mandrilaftalen},
+    title = {Dild Reklame},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.youtube.com/watch?v=x3u_w4heXCQ}}
+    }
+
+
+@misc{bib:url:Reklame:Anti, 
+    author = {Casper \& Mandrilaftalen},
+    title = {Anti Jehova Pæl Reklame},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.youtube.com/watch?v=zzq3Ts0yBgw}}
+    }
+
+@misc{bib:url:Reklame:Tun, 
+    author = {Casper \& Mandrilaftalen},
+    title = {Tun i vand Reklame},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.youtube.com/watch?v=E-FKBbpa8Ro}}
+    }
+    
+@misc{bib:url:Reklame:Sko, 
+    author = {Casper \& Mandrilaftalen},
+    title = {Pålægskoen Reklame},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.youtube.com/watch?v=afO-cc25SaQ}}
+    }
+
+%
+% bacon
+%
+
+
+
 @book{lauer2009bacon,
   title={Bacon: A Love Story: A Salty Survey of Everybody's Favorite Meat},
   author={Lauer, H.},
@@ -26,4 +125,11 @@ http://en.wikipedia.org/wiki/List_of_books_about_bacon
   url={http://books.google.dk/books?id=UztZxSRJlV4C},
   year={2009},
   publisher={HarperCollins}
+}
+@misc{bib:url:WikiBaconBooks,
+    author = {Wikipedia},
+    title = {Book About Bacon},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/List_of_books_about_bacon}}
 }
