added more references

--- a/bibbase.bib
+++ b/bibbase.bib
@@ -1,16 +1,3 @@
-% URL example
-
-%@misc{bib:pdf:CurrentSenseTrans,
-%    author = {Flux A/S},
-%    title = {Product Information Current Sense Transformer Series 1000},
-%    howpublished = {Website},
-%    year = {----},
-%    note = {\url{http://www.flux.dk/industrial/standard_design/dok/1000\%20current\%20transformer.pdf}}
-%}
-
-
-
-
 %
 % Casper og mandrilaftalen
 %
@@ -133,3 +120,147 @@
     year = {2012},
     note = {\url{http://en.wikipedia.org/wiki/List_of_books_about_bacon}}
 }
+
+    @misc{bib:url:WikiBacon,
+    author = {Wikipedia},
+    title = {Bacon - Meat for Hyttebombs},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Bacon}}
+    }
+
+@misc{bib:url:WikiBeef,
+    author = {Wikipedia},
+    title = {Beef - Meat from a cow},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Beef}}
+    }
+    
+    @misc{bib:url:WikiChicken,
+    author = {Wikipedia},
+    title = {Chicken meat for women},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Chicken}}
+    }
+    
+@misc{bib:url:WikiTurkey,
+    author = {Wikipedia},
+    title = {Turkey meat for larger women},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Turkey}}
+    }
+    
+@misc{bib:url:WikiPork,
+    author = {Wikipedia},
+    title = {Pork - meat for men and political incorrect animals},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Pork}}
+    }
+    
+@misc{bib:url:WikiRoastPork,
+    author = {Wikipedia},
+    title = {Roast Pork - meat for men and flaeskesvaerd},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/RoastPork}}
+    }
+    
+@misc{bib:url:WikiHam,
+    author = {Wikipedia},
+    title = {Ham - meat for men and Toasts},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Ham}}
+    }
+    
+@misc{bib:url:WikiLoin,
+    author = {Wikipedia},
+    title = {Loin - meat for men and political correct animals},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Loin}}
+    }
+    
+@misc{bib:url:WikiSpam,
+    author = {Wikipedia},
+    title = {Spam - meat for men and E-mails},
+    howpublished = {Website},
+    year = {2012},
+    note = {http://en.wikipedia.org/wiki/Spam_(Monty_Python)}}
+    }
+    
+
+@misc{bib:url:WikiSpareRibs,
+    author = {Wikipedia},
+    title = {Spare Ribs - meat for fat men},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Spare_ribs}}
+    }
+    
+@misc{bib:url:WikiTenderLoin,
+    author = {Wikipedia},
+    title = {TenderLoin - meat for skinny men},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/TEnder_Loin}}
+    }
+    
+
+    
+    
+%
+% PF
+%    
+    
+@misc{bib:url:Beret2007,
+    author = {Polyteknisk Forening},
+    title = {Polyteknisk Forenings Årsberetning 2007},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.pf.dk/jml/Documents/PF/Beretning_2007.pdf}}
+    }
+    
+@misc{bib:url:Beret2008,
+    author = {Polyteknisk Forening},
+    title = {Polyteknisk Forenings Årsberetning 2008},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.pf.dk/jml/Documents/PF/Beretning_2008.pdf}}
+    }
+    
+@misc{bib:url:Beret2009,
+    author = {Polyteknisk Forening},
+    title = {Polyteknisk Forenings Årsberetning 2009},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.pf.dk/jml/Documents/PF/Beretning_2009.pdf}}
+    }
+    
+@misc{bib:url:Beret2010,
+    author = {Polyteknisk Forening},
+    title = {Polyteknisk Forenings Årsberetning 2010},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.pf.dk/jml/Documents/PF/Beretning_2010.pdf}}
+    }
+    
+@misc{bib:url:Beret2011,
+    author = {Polyteknisk Forening},
+    title = {Polyteknisk Forenings Årsberetning 2011},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.pf.dk/jml/Documents/PF/Beretning_2011.pdf}}
+    }
+
+@misc{bib:url:ISNfoto,
+    author = {DTU Fotonik},
+    title = {ISN DTU fotonik},
+    howpublished = {Website},
+    year = {2009},
+    note = {\url{http://www.fotonik.dtu.dk/Om_DTU_Fotonik/MereOm/Studienævnet.aspx}}
+    }
