--- a/tex/data.tex
+++ b/tex/data.tex
@@ -3,23 +3,23 @@ En samlet liste af erfaringen de to kandidater har indenfor feltet hyttebombing 
 
 \subsection{Studiestarten}
 \begin{enumerate}
-\item Vektor 2006
-\item CSK 2007
-\item CSK 2008
-\item Vektor 2008
-\item CSK 2009
-\item Vektor 2009
+\item Vektor 2006 \cite{bib:url:Beret2007}
+\item CSK 2007\cite{bib:url:Beret2007}
+\item CSK 2008\cite{bib:url:Beret2008}
+\item Vektor 2008\cite{bib:url:Beret2008}
+\item CSK 2009\cite{bib:url:Beret2009}
+\item Vektor 2009\cite{bib:url:Beret2009}
 \end{enumerate}
 
 \subsection{Madhold}
 \begin{enumerate}
-\item vOPtur 2008
-\item Rustur 2009
-\item hyttetur ELKO nystartende 2010
-\item S-husets hyttetur 2011
-\item OPtur 2011
-\item Rustur 2011
-\item hyttetur ELKO nystartende 2011
+\item vOPtur 2008\cite{bib:url:Beret2008}
+\item Rustur 2009\cite{bib:url:Beret2009}
+\item hyttetur ELKO nystartende 2010\cite{bib:url:Beret2010}
+\item S-husets hyttetur 2011\cite{bib:url:Beret2011}
+\item OPtur 2011\cite{bib:url:Beret2011}
+\item Rustur 2011\cite{bib:url:Beret2011}
+\item hyttetur ELKO nystartende 2011\cite{bib:url:Beret2011}
 \item S-husets hyttetur 2012
 \end{enumerate}
 
@@ -27,35 +27,35 @@ En samlet liste af erfaringen de to kandidater har indenfor feltet hyttebombing 
 \subsection{Arrangør af ture}
 
 \begin{enumerate}
-\item Rustur 2006
-\item HerreHyggeHyttetur ELKO 2007 
-\item OPtur 2007
-\item Rustur 2007
-\item HerreHyggeHyttetur ELKO 2008
-\item OPtur 2008
-\item Rustur 2008
-\item hyttetur ELKO nystartende 2008
-\item HerreHyggeHyttetur ELKO 2009
-\item OPtur 2009
-\item Rustur 2009
-\item hyttetur ELKO nystartende 2009
-\item HerreHyggeHyttetur ELKO 2011
+\item Rustur 2006\cite{bib:url:Beret2007}
+\item HerreHyggeHyttetur ELKO 2007 \cite{bib:url:Beret2007}
+\item OPtur 2007\cite{bib:url:Beret2007}
+\item Rustur 2007\cite{bib:url:Beret2007}
+\item HerreHyggeHyttetur ELKO 2008\cite{bib:url:Beret2008}
+\item OPtur 2008\cite{bib:url:Beret2008}
+\item Rustur 2008\cite{bib:url:Beret2008}
+\item hyttetur ELKO nystartende 2008\cite{bib:url:Beret2008}
+\item HerreHyggeHyttetur ELKO 2009\cite{bib:url:Beret2009}
+\item OPtur 2009\cite{bib:url:Beret2009}
+\item Rustur 2009\cite{bib:url:Beret2009}
+\item hyttetur ELKO nystartende 2009\cite{bib:url:Beret2009}
+\item HerreHyggeHyttetur ELKO 2011\cite{bib:url:Beret2011}
 \item HerreHyggeHyttetur ELKO 2012
 \end{enumerate}
 
 \subsection{PF kompetancer}
 \begin{enumerate}
-\item Medlem ELKO 2006-2012
-\item Formand for ELKO rådet 2007-2009
-\item UddanelsesPolitisk Råd 2007-2012
-\item ISN Fotonik 2007-2012
-\item Hegnet 2007->
-\item Hegnet Formand 2007-2008
-\item Fællesrådet 2009+2011-2012
-\item Fællesrådets ForretningsUdvalg 2009-2012
-\item PF's Bestyrelse 2010
-\item Formand for ELKO rådet 2011-2012
-\item Akademisk Råd (DTU) 2011-2012
+\item Medlem ELKO 2006-2012\cite{bib:url:Beret2007},\cite{bib:url:Beret2008},\cite{bib:url:Beret2009},\cite{bib:url:Beret2010},\cite{bib:url:Beret2011}
+\item Formand for ELKO rådet 2007-2009\cite{bib:url:Beret2007},\cite{bib:url:Beret2008},\cite{bib:url:Beret2009}
+\item UddanelsesPolitisk Råd 2007-2012\cite{bib:url:Beret2007},\cite{bib:url:Beret2008},\cite{bib:url:Beret2009},\cite{bib:url:Beret2010},\cite{bib:url:Beret2011}
+\item ISN Fotonik 2007-2012\cite{bib:url:Beret2007},\cite{bib:url:Beret2008},\cite{bib:url:Beret2009},\cite{bib:url:Beret2010},\cite{bib:url:Beret2011} , \cite{bib:url:ISNfoto}
+\item Hegnet 2007->\cite{bib:url:Beret2007},\cite{bib:url:Beret2008},\cite{bib:url:Beret2009},\cite{bib:url:Beret2010},\cite{bib:url:Beret2011}
+\item Hegnet Formand 2007-2008\cite{bib:url:Beret2007},\cite{bib:url:Beret2008}
+\item Fællesrådet 2009+2011-2012\cite{bib:url:Beret2009},\cite{bib:url:Beret2010},\cite{bib:url:Beret2011}
+\item Fællesrådets ForretningsUdvalg 2009-2012\cite{bib:url:Beret2009},\cite{bib:url:Beret2010},\cite{bib:url:Beret2011}
+\item PF's Bestyrelse 2010\cite{bib:url:Beret2010}
+\item Formand for ELKO rådet 2011-2012 \cite{bib:url:Beret2011}
+\item Akademisk Råd (DTU) 2011-2012\cite{bib:url:Beret2011}
 \end{enumerate}
 
 \section{Kødpopularitet}
@@ -79,8 +79,11 @@ En samlet liste af erfaringen de to kandidater har indenfor feltet hyttebombing 
 %\legend{used,understood,not understood}
 %\end{axis}
 %\end{tikzpicture}
-Herunder er de mest gængse kødprodukter listet efter popularitet i følge En unavngiven kilde der følger miljøet tæt:
-
+Herunder er de mest gængse kødprodukter listet efter popularitet i følge En unavngiven kilde der følger miljøet tæt:\\
+Bacon \cite{bib:url:WikiBacon} - ingen introduktion nødvendig\\
+Kylling (Chicken) \cite{bib:url:WikiChicken} - Kød fra små fjerklædte dinosaurnedstammende dyr.\\
+Kalkun (Turkey) \cite{bib:url:WikiTurkey}- Kød fra lidt større fjerklædte dinosaurnedstammende dyr. De flyver vist ikke så godt længere og er derfor nemme at fange med ene trefork\\ 
+Svin (Pork) \cite{bib:url:WikiPork} - Kød der er en god bund i en fantastisk lagkage\\
 \begin{tikzpicture}
 \begin{axis}[
 ybar,
@@ -98,7 +101,14 @@ x tick label style={rotate=45,anchor=east},
 \end{axis}
 \end{tikzpicture}
 
-En nærmere undersøgelse viser dog tydeligt Bacons posistion som svinets mest elskede kød:
+En nærmere undersøgelse viser dog tydeligt Bacons posistion som svinets mest elskede kød:\\
+Bacon \cite{bib:url:WikiBacon}\\
+Flæskesteg \cite{bib:url:WikiRoastPork}\\
+Ham \cite{bib:url:WikiHam}
+Loin \cite{bib:url:WikiLoin}\\
+Spam \cite{bib:url:WikiSpam}\\
+Spare Ribs \cite{bib:url:WikiSpareRibs}\\
+Mørbrad \cite{bib:url:WikiTenderLoin}
 \begin{tikzpicture}
 \begin{axis}[
 ybar,
@@ -147,6 +157,14 @@ samples=20,domain=-1:0,y domain=0:2*pi]
 ({sqrt(1-x^2) * cos(deg(y))},
 {sqrt( 1-x^2 ) * sin(deg(y))},
 x);
+\end{axis}
+\end{tikzpicture}
+
+\begin{tikzpicture}
+\begin{axis}
+\addplot+[scatter,
+samples=500,scatter src=y]
+{x^-2};
 \end{axis}
 \end{tikzpicture}
 
