Flere plots. Hovedfil ændret til master. Tilføjet ekstra tex filer

--- a/bibbase.bib
+++ b/bibbase.bib
@@ -190,7 +190,7 @@
     title = {Spam - meat for men and E-mails},
     howpublished = {Website},
     year = {2012},
-    note = {http://en.wikipedia.org/wiki/Spam_(Monty_Python)}}
+    note = {\url{http://en.wikipedia.org/wiki/Spam_(Monty_Python)}}
     }
     
 
