--- a/master.tex
+++ b/master.tex
@@ -64,7 +64,13 @@
 
 \include{teory}
 
-\include{tex/data}
+\include{tex/meat}
+
+\include{tex/Skilz}
+
+\include{tex/erfaring}
+
+\include{tex/SKALHAVE}
 
 \include{conc}
 
