Almost done Mangler: Billeder,kommentar Skal tilføje afsnit med rationale løsninger såsom øl i ovn, grillen på indkøbsvogn Tilføj afsnit der beskriver Mad til 22 personer Tilføj kommentar om mad til 45 mennesker på 45 minutter

--- a/bibbase.bib
+++ b/bibbase.bib
@@ -2,6 +2,14 @@
 % Casper og mandrilaftalen
 %
 
+@misc{bib:url:2xThyboe,
+    author = {Casper \& Mandrilaftalen},
+    title = {2 x Thyboe},
+    howpublished = {Website},
+    year = {2008},
+    note = {\url{http://www.youtube.com/watch?v=BOyx24ixrXI}}
+    }
+
 @misc{bib:url:Finn:Pedo,
     author = {Casper \& Mandrilaftalen},
     title = {Gentleman Finn som pædofil},
@@ -97,6 +105,15 @@
     year = {2012},
     note = {\url{http://www.youtube.com/watch?v=afO-cc25SaQ}}
     }
+
+@misc{bib:url:Reklame:Atom, 
+    author = {Casper \& Mandrilaftalen},
+    title = {Pålægskoen Reklame},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.youtube.com/watch?v=v0ucOOHulWo&feature=relmfu}}
+    }    
+
 
 %
 % bacon
@@ -263,4 +280,21 @@
     howpublished = {Website},
     year = {2009},
     note = {\url{http://www.fotonik.dtu.dk/Om_DTU_Fotonik/MereOm/Studienævnet.aspx}}
+    }
+    
+@misc{bib:url:BeerBow,
+    author = {Polyteknisk Foreing},
+    title = {Polyteknisk Ølbowlingsklub},
+    howpublished = {Website aka Facebook},
+    year = {2012},
+    note = {\url{http://www.facebook.com/groups/323528997693444/}}
+    }
+    
+% Andet
+@misc{bib:url:Marguerit,
+    author = {Random People},
+    title = {Margueritruten},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://da.wikipedia.org/wiki/Margueritruten}}
     }
