--- a/master.tex
+++ b/master.tex
@@ -60,9 +60,9 @@
 \tableofcontents
 \newpage
 
-\include{intro}
+\include{tex/intro}
 
-\include{teory}
+\include{tex/teori}
 
 \include{tex/meat}
 
@@ -72,7 +72,7 @@
 
 \include{tex/SKALHAVE}
 
-\include{conc}
+\include{tex/conc}
 
 %End of the document, inserting bib and appendix
 \newpage
