--- a/tex/SKALHAVE.tex
+++ b/tex/SKALHAVE.tex
@@ -1,6 +1,10 @@
-\section{Ting vi skal HAVE}
+\subsection{Ting vi skal HAVE}
 \begin{itemize}
 \item Løgplade
 \item Træfisse
 \item Kage med kød
+\item Vi skal bruger DILD\cite{bib:url:Reklame:Dild}
+\item Vi skal have en Anti Jehova Pæl\texttrademark \cite{bib:url:Reklame:Anti}
+\item Tun i Vand\copyright \, skal bruges \cite{bib:url:Reklame:Tun} 
+\item Atomdrevne morgenkåber for at styrke arbejdsmoralen om natten \cite{bib:url:Reklame:Atom}
 \end{itemize}
