--- a/tex/meat.tex
+++ b/tex/meat.tex
@@ -1,4 +1,4 @@
-\section{Kødpopularitet}
+\subsection{Kødpopularitet}
 
 Herunder er de mest gængse kødprodukter listet efter popularitet i følge En unavngiven kilde der følger miljøet tæt:\\
 \begin{itemize}
