--- a/tex/erfaring.tex
+++ b/tex/erfaring.tex
@@ -1,7 +1,7 @@
-\section{Erfaring}
+\subsection{Erfaring}
 En samlet liste af erfaringen de to kandidater har indenfor feltet hyttebombing indenfor Polyteknisk Forening:
 
-\subsection{Studiestarten}
+\subsubsection{Studiestarten}
 \begin{enumerate}
 \item Vektor 2006 \cite{bib:url:Beret2007}
 \item CSK 2007\cite{bib:url:Beret2007}
@@ -11,7 +11,7 @@ En samlet liste af erfaringen de to kandidater har indenfor feltet hyttebombing 
 \item Vektor 2009\cite{bib:url:Beret2009}
 \end{enumerate}
 
-\subsection{Madhold}
+\subsubsection{Madhold}
 \begin{enumerate}
 \item vOPtur 2008\cite{bib:url:Beret2008}
 \item Rustur 2009\cite{bib:url:Beret2009}
@@ -24,7 +24,7 @@ En samlet liste af erfaringen de to kandidater har indenfor feltet hyttebombing 
 \end{enumerate}
 
 
-\subsection{Arrangør af ture}
+\subsubsection{Arrangør af ture}
 
 \begin{enumerate}
 \item Rustur 2006\cite{bib:url:Beret2007}
@@ -43,6 +43,7 @@ En samlet liste af erfaringen de to kandidater har indenfor feltet hyttebombing 
 \item HerreHyggeHyttetur ELKO 2012
 \end{enumerate}
 
+\begin{center}
 \begin{tikzpicture}
 \begin{axis}[
 ybar,
@@ -59,8 +60,9 @@ x tick label style={rotate=45,anchor=east},
 \addplot coordinates {(2005,2) (2006,2) (2007,4) (2008,10) (2009,9)(2010,7)(2011,7)};
 \end{axis}
 \end{tikzpicture}
+\end{center}
 
-\subsection{PF kompetancer}
+\subsubsection{PF kompetancer}
 \begin{enumerate}
 \item Medlem ELKO 2006-2012\cite{bib:url:Beret2007},\cite{bib:url:Beret2008},\cite{bib:url:Beret2009},\cite{bib:url:Beret2010},\cite{bib:url:Beret2011}
 \item Formand for ELKO rådet 2007-2009\cite{bib:url:Beret2007},\cite{bib:url:Beret2008},\cite{bib:url:Beret2009}
@@ -75,7 +77,7 @@ x tick label style={rotate=45,anchor=east},
 \item Akademisk Råd (DTU) 2011-2012\cite{bib:url:Beret2011}
 \end{enumerate}
 
-\section{Hvad er Tha Bombs ikke}
+\subsection{Hvad er Tha Bombs\texttrademark ikke}
 \begin{enumerate}
 \item Pædofil \cite{bib:url:Finn:Pedo}
 \item Satan-tilbeder \cite{bib:url:Finn:Satan}
@@ -84,16 +86,6 @@ x tick label style={rotate=45,anchor=east},
 \item Nazist\cite{bib:url:Finn:Nazist}
 \end{enumerate}
 
-
-Vi skal bruger DILD\cite{bib:url:Reklame:Dild}
-\\
-\\
-Vi skal have en Anit Jehova Pæl \cite{bib:url:Reklame:Anti}
-\\
-\\
-Tun i vand skal bruges \cite{bib:url:Reklame:Tun} rigeligt med tun i vand
-\\
-\\
 
 %\begin{tikzpicture}
 %\begin{axis}[view={60}{30}]
